--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,17 +1,67 @@
-<div class="wrapper">
-<h1>Pages#home</h1>
-<div class="container">
-  <div class="row">
-    <div class="col-xs-12 col-sm-4">
-      <!-- insert <div class="card"> -->
+<div class="wrapper padded text-center">
+  <h1>Give 100, Get $100! </h1>
+  <div class="info-text">
+    <p>Recommend Third Space Learning to other schlools and for each school that signs p you earn $100 off your next purchase!</p>
+  </div>
+  <div class="container">
+    <div class="row">
+      <div class="col-xs-12 col-sm-4">
+        <div class="card">
+          <i class="fa fa-users" aria-hidden="true"></i>
+          <img class="card-user avatar" src="user.jpg">
+          <a class="card-link" href="#" ></a>
+        </div>
+        <h2>Recommend us to another school</h2>
+      </div>
+      <div class="col-xs-12 col-sm-4">
+        <div class="card">
+          <i class="fa fa-hospital-o" aria-hidden="true"></i>
+          <a class="card-link" href="#" ></a>
+        </div>
+        <h2>The school signs up for the next term</h2>
+      </div>
+      <div class="col-xs-12 col-sm-4">
+        <div class="card">
+          <i class="fa fa-money" aria-hidden="true"></i>
+          <a class="card-link" href="#" ></a>
+        </div>
+        <h2>You both get $100</h2>
+      </div>
     </div>
-    <div class="col-xs-12 col-sm-4">
-      <!-- insert <div class="card"> -->
+
+    <div class="container padded">
+      <div class="row">
+        <div class="col-xs-12 col-sm-6">
+          <div class="card-link">
+            <h2>Forward your unique school code to other schools</h2>
+          </div>
+        </div>
+        <div class="col-xs-12 col-sm-6">
+          <div class="card-link">
+            <h2>Use our template to send lots or recommendations quickly</h2>
+            <div class="row">
+              <input type="hidden" name="count" value="1" />
+              <div class="control-group" id="fields">
+                <div class="controls" id="profs">
+                  <form class="input-append">
+                  <div id="field"><input autocomplete="off" class="input" id="field1" name="prof1" type="text" placeholder="Receivers email address" data-items="8"/><button id="b1" class="btn add-more" type="button">Add another email</button></div>
+                  <button class="btn btn-danger">Send email</button>
+                  </form>
+                  <br>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
     </div>
-    <div class="col-xs-12 col-sm-4">
-      <!-- insert <div class="card"> -->
+    <div class="share-links">
+      <h3>Or share using Social Media</h3>
+      <!-- Sharing links -->
+      <a href="https://www.facebook.com/sharer/sharer.php?u=https://www.thirdspacelearning.com/" title="Share on Facebook" target="_blank" class="btn btn-facebook"><i class="fa fa-facebook"></i></a>
+      <a href="http://twitter.com/home?status=SHAREMESSAGE" title="Share on Twitter" target="_blank" class="btn btn-twitter"><i class="fa fa-twitter"></i></a>
+      <a href="http://www.linkedin.com/shareArticle?mini=true&url=&title=&summary=SHAREMESSAGE" title="Share on LinkedIn" target="_blank" class="btn btn-linkedin"><i class="fa fa-linkedin"></i></a>
+      <a href="https://plus.google.com/share?url=SHAREMESSAGE" title="Share on Google+" target="_blank" class="btn btn-googleplus"><i class="fa fa-google-plus"></i></a>
     </div>
   </div>
-</div>
-<p>Find me in app/views/pages/home.html.erb</p>
 </div>
