--- a/app/assets/stylesheets/layout/_footer.scss
+++ b/app/assets/stylesheets/layout/_footer.scss
@@ -1,1 +1,63 @@
-// Your footer style
+.footer-container {
+  background: white;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+  color: #E8EEF2;
+  padding: 20px 30px 0px 0px;
+  align-items: baseline;
+  background-color: #1C292F;
+  box-shadow: none;
+  h4 {
+    margin-top: 0px;
+    color: white;
+    font-size: 15px;
+  }
+  .icons {
+    font-size: 23px;
+  }
+}
+
+.footer {
+  list-style-type: none;
+  i {
+    font-size: 35px;
+    margin-right: 10px;
+    color: #3D8FDA;
+  }
+  i:hover {
+    color: #20C3C6;
+    transition-duration: 1s;
+  }
+}
+
+.footer {
+  img {
+    margin: 15px 20px 0px 20px;
+    width: 46px;
+    margin-top: 10px;
+  }
+  img:hover {
+    opacity: 0.3;
+    transition-duration: 1s;
+  }
+}
+
+.connect {
+  list-style: none;
+  span {
+    margin-left: 15px;
+    font-size: 15px;
+    font-family: "Raleway", "Helvetica", "sans-serif";
+    color: white;
+  }
+  li {
+    margin-bottom: 15px;
+  }
+  a {
+    font-family: "Raleway", "Helvetica", "sans-serif";
+    font-size: 15px;
+    color: white;
+  }
+}
+
