wrote in Read me file

--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -5,7 +5,7 @@
         <ul class="connect">
           <li><i class="fa fa-map-marker icons" aria-hidden="true"><span>Third Space Learning 14-22 Elder Street, London E1 6BT</span></i></li>
           <li><a href="mailto:hello@thirdcpaselearning.com?Subject=Hello"><i class="fa fa-envelope-o icons" aria-hidden="true"><span>hello@thirdspacelearning.com</span></i></li>
-          <li><a href="https://github.com/petia182" target="_blank"><i class="fa fa-mobile icons" aria-hidden="true"><span>0203 771 0093</span></i></a></li>
+          <li><i class="fa fa-mobile icons" aria-hidden="true"><span>0203 771 0093</span></i></li>
         </ul>
       </div>
 
